[gd_scene load_steps=10 format=3 uid="uid://0jvsc7t1t84m"]

[ext_resource type="Texture2D" uid="uid://cunf06cdlikck" path="res://assets/cga_ui_gold/l1.png" id="1_6fi6k"]
[ext_resource type="Script" uid="uid://ca80y2wctmc50" path="res://scripts/hud.gd" id="1_047uy"]
[ext_resource type="Texture2D" uid="uid://dvjk5d0b637a4" path="res://assets/Winter Platformer Game Tileset (snow, christmas)/object/bonus2.png" id="1_ahhtf"]
[ext_resource type="Texture2D" uid="uid://ndw2h4tjfn6j" path="res://assets/cga_ui_gold/b_5.png" id="1_uo2fv"]
[ext_resource type="FontFile" uid="uid://cpptufn4ko84x" path="res://assets/roboto/Roboto-Black.ttf" id="2_uo2fv"]
[ext_resource type="Texture2D" uid="uid://dcwxiufjsvs2e" path="res://assets/cga_ui_gold/s1.png" id="3_5pdws"]
[ext_resource type="Texture2D" uid="uid://c34v1cnetgjiq" path="res://assets/cga_ui_gold/s2.png" id="4_047uy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_047uy"]
texture = ExtResource("1_uo2fv")
expand_margin_left = 32.0
expand_margin_top = 24.0
expand_margin_right = 32.0
expand_margin_bottom = 24.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uo2fv"]
texture = ExtResource("1_uo2fv")
expand_margin_left = 32.0
expand_margin_top = 24.0
expand_margin_right = 32.0
expand_margin_bottom = 32.0

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_047uy")
empty_star_texture = ExtResource("4_047uy")
full_star_texture = ExtResource("3_5pdws")

[node name="CaneContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 276.0
offset_top = 31.0
offset_right = 409.0
offset_bottom = 95.0
theme_override_styles/panel = SubResource("StyleBoxTexture_047uy")

[node name="HBoxContainer2" type="HBoxContainer" parent="CaneContainer"]
layout_mode = 2
theme_override_constants/separation = 14
alignment = 1

[node name="SugarIcon" type="TextureRect" parent="CaneContainer/HBoxContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("1_ahhtf")
expand_mode = 1

[node name="SugarCounterLabel" type="Label" parent="CaneContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_uo2fv")
theme_override_font_sizes/font_size = 45
text = "145"

[node name="HeartContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 31.0
offset_right = 190.0
offset_bottom = 91.0
theme_override_styles/panel = SubResource("StyleBoxTexture_047uy")

[node name="HBoxContainer" type="HBoxContainer" parent="HeartContainer"]
layout_mode = 2
theme_override_constants/separation = 14
alignment = 1

[node name="HeartIcon" type="TextureRect" parent="HeartContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 32)
layout_mode = 2
texture = ExtResource("1_6fi6k")
expand_mode = 1

[node name="LivesCounterLabel" type="Label" parent="HeartContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_uo2fv")
theme_override_font_sizes/font_size = 50
text = " 3"

[node name="StarsContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 904.0
offset_top = 31.0
offset_right = 1104.0
offset_bottom = 95.0
theme_override_styles/panel = SubResource("StyleBoxTexture_uo2fv")

[node name="Container" type="HBoxContainer" parent="StarsContainer"]
layout_mode = 2
alignment = 1

[node name="EmptyStarIcon" type="TextureRect" parent="StarsContainer/Container"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("3_5pdws")
expand_mode = 1

[node name="EmptyStarIcon2" type="TextureRect" parent="StarsContainer/Container"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("4_047uy")
expand_mode = 1

[node name="EmptyStarIcon3" type="TextureRect" parent="StarsContainer/Container"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("4_047uy")
expand_mode = 1
